bank-app/k8s/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: bank-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - name: account-service
        image: 957948932374.dkr.ecr.ap-south-1.amazonaws.com/bank-app/account-service:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/accounts/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/accounts/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: bank-app
spec:
  selector:
    app: account-service
  ports:
  - port: 8080
    targetPort: 8080
