bank-app/k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: bank-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: 957948932374.dkr.ecr.ap-south-1.amazonaws.com/bank-app/notification-service:latest
        ports:
        - containerPort: 3002
        livenessProbe:
          httpGet:
            path: /health
            port: 3002
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: bank-app
spec:
  selector:
    app: notification-service
  ports:
  - port: 3002
    targetPort: 3002
