bank-app/k8s/transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: bank-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
      - name: transaction-service
        image: 957948932374.dkr.ecr.ap-south-1.amazonaws.com/bank-app/transaction-service:latest
        ports:
        - containerPort: 3001
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: bank-app
spec:
  selector:
    app: transaction-service
  ports:
  - port: 3001
    targetPort: 3001
