bank-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-app-ingress
  namespace: bank-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: bank-app-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:957948932374:certificate/636c9394-8728-4af5-87db-ca83ac043a5d
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: "200,404"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/accounts
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 8080
      - path: /api/transactions
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 3001
      - path: /api/notifications
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 3002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
